--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
-name: Cava Parallax
+name: Cava Grill | Hello Hungry People
+
 author: Daniel Wood
+
 author_email: daniel.j.wood11@gmail.com
+
+url: http://cavagrill.la
+
+exclude: [README.md, typography.html, files/pngs_old/]
